--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -3,6 +3,7 @@
 
 .main-navigation {
   width: 100%;
+  height: 10%;
   position: sticky;
   top: 0;
   left: 0;
@@ -10,14 +11,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 10%;
   background-color: $primary-bg;
   padding: 0 1.25rem;
   text-transform: uppercase;
   color: inherit;
 
+  @media (max-width: 990px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   .company-logo {
     margin-left: 15%;
+    text-transform: uppercase;
+    @media (max-width: 990px) {
+      display: none;
+    }
 
     a {
       &:hover,
@@ -33,24 +44,12 @@
     justify-content: flex-end;
     margin-right: 10%;
 
-    .btn {
-      display: none;
-      border: none;
-      background-color: transparent;
-
-      .icon {
-        font-size: 2rem;
-        color: $primary-color;
-        cursor: pointer;
-      }
-    }
-
-    ul {
+    &-list {
       list-style: none;
 
       li {
         display: inline-block;
-        margin: 0 0.9rem;
+        margin: 0 1rem;
         padding: 0.6rem;
 
         a {
@@ -65,37 +64,11 @@
       }
     }
 
-    .active {
-      left: 0;
-    }
-
     @media (max-width: 990px) {
-      .btn {
-        display: block;
-      }
-
-      ul {
-        position: fixed;
-        bottom: 8%;
-        left: -100vw;
-        background-color: rgba(128, 128, 128, 0.6);
-        height: 20vh;
-        width: 100%;
-        transition: left 1000ms ease;
-        padding: 1rem 0;
+      &-list {
         li {
           display: block;
           text-align: center;
-        }
-      }
-    }
-  }
-  @media ((min-width: 991px) and (max-width: 1100px)) {
-    .pages-navigation {
-      margin-right: 5%;
-      ul {
-        li {
-          margin: 0 0.6rem;
         }
       }
     }
